docs: sync phase-1 master plan with actual day ordering
Week 1: Day 7 = Modern Java (Java 8 & 11), Day 8 = Modern Java (Java 17 &
21), Day 9 = Week 1 Synthesis: Production Diagnosis — reflecting the
synthesis-moves-to-last reorder. Rewrote all three blocks to match the
built lessons.

Fixed cascading day-number errors so the doc matches curriculum.js:
- Week 2 entries renumbered 8-14 -> 10-16
- Week 3 header and entries renumbered 15-21 -> 17-23

Days are now contiguous 1-23 across the three Phase-1 weeks.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>